# fin-strain-gauge

Hardware/fin/: fin.kicad_pro  fin.kicad_sch
Hardware/fin-prototype/: fin-prototype.kicad_pcb  fin-prototype.kicad_pro  fin-prototype.kicad_sch  fp-lib-table  sym-lib-table
Hardware/flight-computer/: flight-computer.kicad_pro  sym-lib-table
Hardware/libraries/: FinLib.kicad_sym
Prototype_EverythingElse/: strain-gauge-B_Cu.gbr  strain-gauge-B_Mask.gbr  strain-gauge-B_Paste.gbr  strain-gauge-B_Silkscreen.gbr  strain-gauge-Edge_Cuts.gbr  strain-gauge-F_Cu.gbr  strain-gauge-F_Mask.gbr  strain-gauge-F_Paste.gbr  strain-gauge-F_Silkscreen.gbr  strain-gauge-job.gbrjob
Prototype_Excellon/: strain-gauge-NPTH.drl  strain-gauge-PTH.drl
Prototype_GerberX2/: strain-gauge-NPTH-drl.gbr  strain-gauge-PTH-drl.gbr
SGTC/: SGTC-B_Cu.gbr  SGTC-B_Mask.gbr  SGTC-B_Paste.gbr  SGTC-B_Silkscreen.gbr  SGTC-Edge_Cuts.gbr  SGTC-F_Cu.gbr  SGTC-F_Mask.gbr  SGTC-F_Paste.gbr  SGTC-F_Silkscreen.gbr  SGTC-NPTH.drl  SGTC-PTH.drl  SGTC-job.gbrjob  SGTC.kicad_pcb  SGTC.kicad_pro  SGTC.kicad_sch  SGTCR2R4.kicad_pcb  SGTC_Center.kicad_pcb  SGTC_Center.kicad_pro  SGTC_Center.kicad_sch  SGTC_Center.step  StrainGauge.kicad_sch  StrainGauge2.kicad_sch  adc.kicad_sch  fp-lib-table
SGTC/FinLib.pretty/: ADS131M03.kicad_mod  TMP235A4DBZR.kicad_mod
SGTC/NewCoreGerbers/: SGTC_Center-B_Cu.gbr  SGTC_Center-B_Mask.gbr  SGTC_Center-B_Paste.gbr  SGTC_Center-B_Silkscreen.gbr  SGTC_Center-Edge_Cuts.gbr  SGTC_Center-F_Cu.gbr  SGTC_Center-F_Mask.gbr  SGTC_Center-F_Paste.gbr  SGTC_Center-F_Silkscreen.gbr  SGTC_Center-NPTH.drl  SGTC_Center-PTH.drl  SGTC_Center-job.gbrjob
SGTC/gerbers/: SGTC_Center-B_Cu.gbr  SGTC_Center-B_Mask.gbr  SGTC_Center-B_Paste.gbr  SGTC_Center-Edge_Cuts.gbr  SGTC_Center-F_Cu.gbr  SGTC_Center-F_Silkscreen.gbr  SGTC_Center-PTH.drl  SGTC_Center-job.gbrjob
SGTC/gerbers_flex/: SGTC-B_Silkscreen.gbr  SGTC-F_Cu.gbr  SGTC-F_Mask.gbr  SGTC-F_Silkscreen.gbr  SGTC-NPTH.drl  SGTC-PTH.drl  SGTC-job.gbrjob
Software/: flake.nix
Software/esp_firmware/: Cargo.toml  Embed.toml  flake.nix  notes-10-24.md
Software/fin_firmware/: .gitignore  Cargo.toml  devenv.nix  memory.x
Software/fin_firmware/.cargo/: config.toml
Software/fin_firmware/src/: main.rs
Software/fin_firmware/src/adc/: adc_consts.rs  mod.rs
Software/fin_firmware/src/flash/: mod.rs
Software/firmware/: Cargo.toml
Software/nix/: gcc-esp.nix  rust-esp.nix  rust-src-esp.nix
esp_firmware/: Cargo.toml  README.md  flake.nix  info
esp_firmware/src/: lib.rs  lsm.rs
esp_firmware/src/fin/: mod.rs
esp_firmware/src/sd/: dma.rs  mod.rs
firmware/: Cargo.toml  README.md  flake.nix  justfile
firmware/src/: fin.rs  main.rs  sd.rs
firmware/src/fin/: adc_consts.rs  mod.rs
flight-computer/: flight-computer.kicad_pcb  flight-computer.kicad_pro  flight-computer.kicad_sch  flight-computer.kicad_sym  flight-computer.step
kicad/: adc.kicad_sch  amplifier.kicad_sch  counter.kicad_sch  multiplexer.kicad_sch  pins.kicad_sch  strain-gauge.kicad_pcb  strain-gauge.kicad_pro  strain-gauge.kicad_sch  strain-gauge.kicad_sym
(+149 files in other folders)
