[package]
edition      = "2021"
name         = "esp_firmware"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "esp_firmware"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-hal = { version = "=1.0.0", features = [
  "defmt",
  "esp32s3",
  "unstable",
] }

critical-section = "1.2.0"
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-radio = { version = "0.17.0", features = ["esp-now", "defmt", "unstable", "esp32s3"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
esp32s3 = "0.34.0"
embedded-error = "0.6.0"
bitfield = "0.19.2"
crc-any = { version = "2.5.0", default-features = false }
esp-rtos = { version = "0.2.0", features = ["esp32s3", "esp-radio"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
